chore: Upgrade Java version to 25 and update related configurations