@@ -35,7 +35,7 @@ class RepresentativeRepositoryTest extends BaseRepositoryTest {
   void testSearchBy() {
     List<Representative> result = repository.findByCustomerId(1);
     Assertions.assertThat(result).hasSize(1);
-    assertRepresentative(result.get(0));
+    assertRepresentative(result.getFirst());
   }
 
   @Test
